Fix Catalan and Spanish translations for domain label.

--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -418,7 +418,7 @@ msgstr "Tots"
 
 msgctxt "model:ir.action.act_window.domain,name:act_contract_domain_confirmed"
 msgid "Confirmed"
-msgstr "Confirmat"
+msgstr "Confirmats"
 
 msgctxt "model:ir.action.act_window.domain,name:act_contract_domain_draft"
 msgid "Draft"
